# eternalai

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.example.json
.claude/agents/: boundary-checker.md
.github/workflows/: smoke.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260521_163000_pgvector_baseline.py
app/: main.py
app/db/: __init__.py  config.py  health.py  session.py
apps/miniapp/: .env.example  README.md
apps/web/: .env.example  README.md
contracts/: README.md
contracts/events/: README.md  worker.yaml
contracts/http/: README.md  api.yaml  asr.yaml
deploy/docker/: api.Dockerfile  asr.Dockerfile  worker.Dockerfile
docs/: README.md
docs/architecture/: README.md
docs/blueprint/: enterprise_agent_runtime_blueprint_v3_2_4_freeze_final.md  phase0_architecture_freeze_and_mvp_spec_v1_0_11.md  (+1 more)
migrations/: env.py
planning/: acceptance_spec.yaml  bootstrap_plan.md  bootstrap_result.json  dev_plan.yaml  documentation.md  implement.md  phase0_result.json  plan_review_checklist.md  run_policy.yaml
scripts/: check_dependencies.py  dev-api.ps1  dev-asr.ps1  dev-worker.ps1  doctor.ps1  test.ps1
services/: __init__.py  runtime_config.py
spec/: invariant_spec.yaml  module_spec.yaml  product_spec.md  product_spec.yaml  resource_spec.yaml
tests/: test_health.py
web/: eslint.config.js  index.html  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
(+211 files in other folders)
